have application running and packaged